Change microservices names and add requirements to each one

--- a/microservicio_bodegas/requirements.txt
+++ b/microservicio_bodegas/requirements.txt
@@ -1,7 +1,5 @@
-aniso8601
 click
 Flask
-Flask-RESTful
 Flask-SQLAlchemy
 greenlet
 itsdangerous
@@ -9,7 +7,7 @@ Jinja2
 MarkupSafe
 marshmallow
 marshmallow-sqlalchemy
-pytz
-six
 SQLAlchemy
 Werkzeug
+flask_restful
+requests
